# drf-auth

./: README.md  db.sqlite3  pyproject.toml
bookclub/: admin.py  models.py  serializers.py  urls.py  views.py
bookclub/migrations/: 0001_initial.py  0002_alter_bookclub_author.py
config/: settings.py  urls.py
